- New: Can split a discount into two smaller discount. This allows to use a
       discount on an invoice even if invoice amount is lower than discount
       credit available.
- New: Can use variables into the free text on PDF (__TOTAL_TTC_, __TOTAL_VAT...)
- New: Increase page loading speed (all changes reported by Google PageSpeed
       tool has been added). 
- Fix: "Now" link works when date popup is not used.
- Fix: Debug seriously the email notification module.
- Fix: Error Call to a member function trans when refusing a supplier order.
- Fix: Fix payment conditions on commercial proposals.
- Fix: Nb of orders to process was wrong.
- Fix: Customer code was not correct on PDF it if contains special 
       characters.
- Fix: Can update price even with "NPR" VAT rates.
- Fix: When product type is missing, description is not lost when adding 
       new product lines.
- Fix: CC and BCC in emails was not used if using SMTPS handler.
- Fix: Last character was lost when text end with n or r.
- Fix: LDAP synchronization is now more robust (transaction and 
  use modify instead of delete/add).
- Fix: Fix: Setup of member synchronization does not conflict 
  with contact or user synchronization.

For translators:
- Update some language files.
- Can accept right to left languages. Added an "automatic" arabe translation.

For developers:
- An external module can force the third party code to be required whatever
  is the rule of third party code module.
- Update fckeditor to 2.6.4.
- Update Smarty to 2.6.26.
- Removed some deprecated code and files.
- Creation of directory in module descriptor is simpler.
- Can use an alternate document_root directory to develop with 
  sources on two repositories.
- Removed useless code of old commercial module.
- Updated wiki documentation.
- Better W3C standard.
- Can add init data when enabling a module.
- Can fix some corruptions in database by calling the update page with
  action=repair