@@ -527,7 +527,7 @@ PDFMerge=PDF Merge
 Merge=Merge
 PrintContentArea=Show page to print main content area
 NoMenu=No sub-menu
-WarningYouAreInMaintenanceMode=Warning, you are in a maintenance mode, so only login <b>%s</b> is allowed to connect.
+WarningYouAreInMaintenanceMode=Warning, you are in a maintenance mode, so only login <b>%s</b> is allowed to use application at the moment.
 # Week day
 Day1=Monday
 Day2=Tuesday
