@@ -39,7 +39,9 @@ For users:
        credit available.
 - New: Can use variables into the free text on PDF (__TOTAL_TTC_, __TOTAL_VAT...)
 - New: Increase page loading speed (all changes reported by Google PageSpeed
-       tool has been added). 
+       tool has been added).
+- New: Add support of constant MAIN_ONLY_LOGIN_ALLOWED to allow to lock all
+       access to any users axcept the one defined in constant. 
 - Fix: "Now" link works when date popup is not used.
 - Fix: Debug seriously the email notification module.
 - Fix: Error Call to a member function trans when refusing a supplier order.
